<resources>
    <string name="app_name">BakingApp</string>
    <string name="recipes">Recipes</string>
    <string name="bake_name">Bake name</string>
    <string name="total_ingredients">Total Ingredients:</string>
    <string name="total_steps">Total steps:</string>
    <string name="servings">Servings:</string>
    <string name="unknown">Unknown</string>
    <string name="cups">Cups</string>
    <string name="cup">Cup</string>
    <string name="table_spoons">Table spoons</string>
    <string name="table_spoon">Table spoon</string>
    <string name="tea_spoons">Tea spoons</string>
    <string name="tea_spoon">Tea spoon</string>
    <string name="kilos">Kilos</string>
    <string name="kilo">Kilo</string>
    <string name="grams">Grams</string>
    <string name="gram">Gram</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="show_next_ingredient">Show next ingredient</string>
    <string name="step">Step</string>
    <string name="video_not_available">Video not available!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="show_next_step">Show next step</string>
    <string name="show_previous_step">Show previous step</string>
    <string name="string_of">of</string>
    <string name="introduction_step">Introduction step</string>
    <string name="no_video_for_this_step">No video for this step</string>
    <string name="play_video">Play video</string>
    <string name="pause_video">Pause video</string>
    <string name="media_player_artwork">Media player artwork</string>
    <string name="sorry_an_error_occurred_check_your_internet_connection_and_tap_to_reload">Sorry! An error occurred, check your internet connection and tap to reload</string>
    <string name="baking_app_ingredients">Baking App Ingredients</string>
    <string name="ingredients_added_to_widget">Ingredients added to widget</string>
    <string name="error_adding_to_widget">Error adding ingredients to widget</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="remove_ingredient_from_widget">Remove ingredient from widget</string>
    <string name="ingredients_removed">Ingredients removed from widget</string>
    <string name="error_removing_ingredients">Error removing ingredients from widget</string>
    <string name="must_implement_onstep_click">Must implement OnStepClickListener</string>
    <string name="share">Share</string>
    <string name="share_ingredients">Share ingredients</string>
    <string name="step_thumbnail">Step thumbnail</string>
    <string name="step_icon">Step icon</string>
</resources>
