<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/match_parent"
    android:fillViewport="true"
    tools:context=".BakesDetailsActivity">
<android.support.constraint.ConstraintLayout
    style="@style/width_match_height_wrap">

    <TextView
        android:id="@+id/tv_title_ingredients"
        style="@style/tv_title_ingredients"
        android:layout_marginTop="8dp"
        android:text="@string/ingredients"/>

    <ImageView
        android:id="@+id/iv_next"
        android:contentDescription="@string/show_next_ingredient"
        style="@style/iv_next"/>

    <ImageView
        android:id="@+id/iv_previous"
        android:contentDescription="@string/show_next_ingredient"
        style="@style/iv_previous"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_ingredients_list"
        style="@style/rv_ingredients_list"/>

    <TextView
        android:id="@+id/tv_title_steps"
        style="@style/tv_title_steps"
        android:text="@string/steps"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_steps_list"
        style="@style/rv_steps_list"/>
</android.support.constraint.ConstraintLayout>
</ScrollView>